# libhttp2

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md
cmake/: libhttp2Config.cmake.in
examples/: client.cc  server.cc
include/http2/: transport.h
src/: http2.cc
src/hpack/: decode.cc  decode.h  dynamic_metadata.cc  dynamic_metadata.h  encode.cc  encode.h  hpack.cc  hpack.h  huffman.cc  huffman.h  huffman_data.cc  metadata.h  send_record.cc  send_record.h  static_metadata.cc  static_metadata.h  static_table.txt
src/http2/: connection.cc  connection.h  errors.h  frame.cc  frame.h  pack.cc  pack.h  parser.cc  parser.h  settings.cc  stream.cc  stream.h
src/utils/: atomic.h  byte_order.cc  byte_order.h  date.h  log.cc  log.h  mpscq.cc  mpscq.h  murmur_hash.cc  murmur_hash.h  slice.cc  slice.h  slice_buffer.cc  slice_buffer.h  testutil.cc  testutil.h  useful.h
test/: hpack_test.cc  integration_ext_test.cc  integration_test.cc  pack_test.cc  protocol_test.cc  slice_test.cc  static_table_test.cc  test_hpack_primitive.cc  test_huffman.cc  test_integration.cc  test_integration_ext.cc  test_multi_stream_crash.cc  test_parse.cc  test_protocol.cc  util_test.cc
tools/: mkhufftbl.py
